add configurations in the meta.yaml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "1.18.21" %}
-{% set hash = "00748c760dc30be61c6db4b092718f6a9f8d27c767da0e232695a65adb75cde8" %}
+{% set version = "1.18.34" %}
+{% set hash = "5116e9bdec19adcc5531a9b7b535be77d5314eef092aaf7033ace48a9be65036" %}
 
 {% set vmajor,vminor,vpatch = version.split('.') %}
 # ALWAYS DOUBLE-CHECK THESE OFFSETS AGAINST UPSTREAM setup.py
@@ -25,12 +25,12 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - wheel
     - setuptools
   run:
-    - python
+    - python >=3.6
     - botocore {{ botocore_bounds }}
     - jmespath >=0.7.1,<1.0.0
     - s3transfer >=0.5.0,<0.6.0
