--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python
     - pip
     - wheel
     - setuptools
@@ -45,6 +45,7 @@ test:
     - boto3.s3
   requires:
     - pip
+    - python <3.10
   commands:
     - pip check
 
