--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,18 +1,18 @@
 {% set name = "boto3" %}
-{% set version = "1.34.154" %}
+{% set version = "1.36.3" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 864f06528c583dc7b02adf12db395ecfadbf9cb0da90e907e848ffb27128ce19
+  url: https://github.com/boto/boto3/archive/{{ version }}.tar.gz
+  sha256: 717524617c624a8547baca79c5b33b385c2351e0c400029b16a9f2d3df26609d
 
 build:
   number: 0
-  skip: true  # [py<38]
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
+  skip: true  # [py<38]
 
 requirements:
   host:
@@ -22,11 +22,26 @@ requirements:
     - setuptools
   run:
     - python
-    - botocore >=1.34.154,<1.35.0
+    - botocore >=1.36.3,<1.37.0
     - jmespath >=0.7.1,<2.0.0
-    - s3transfer >=0.10.0,<0.11.0
+    - s3transfer >=0.11.0,<0.12.0
+  run_constrained:
+    # https://github.com/boto/boto3/blob/1.36.3/setup.cfg#L11C1-L11C35
+    # pip install --dry-run "botocore[crt]>=1.21.0,<2.0a0"
+    # pip output is:
+    # Collecting awscrt==0.23.4 (from botocore[crt]<2.0a0,>=1.21.0)
+    - awscrt 0.23.4
+
+# Integration tests are required to validate real AWS services like S3 and SQS, which are not available in our environment.
+# Error example:
+#   - botocore.exceptions.NoCredentialsError: Unable to locate credentials
+#   - botocore.exceptions.ClientError: An error occurred (NoSuchBucket) when calling the GetObject operation: The specified bucket does not exist
+# Skipping integration tests:
+{% set ignore_tests = " --ignore=tests/integration/" %}
 
 test:
+  source_files:
+    - tests
   imports:
     - boto3
     - boto3.docs
@@ -34,10 +49,12 @@ test:
     - boto3.ec2
     - boto3.resources
     - boto3.s3
-  requires:
-    - pip
   commands:
     - pip check
+    - pytest -v {{ ignore_tests }} tests
+  requires:
+    - pip
+    - pytest
 
 about:
   home: https://aws.amazon.com/sdk-for-python/
